Fixled layout so container is always visible on mobile

--- a/src/TRAISI/ClientApp/src/survey-viewer-app/app/components/survey-viewer/survey-viewer.component.scss
+++ b/src/TRAISI/ClientApp/src/survey-viewer-app/app/components/survey-viewer/survey-viewer.component.scss
@@ -64,6 +64,14 @@
 	.survey-body {
 		margin: 10px;
 	}
+	.survey-body-container {
+		margin: auto;
+		text-align: center;
+		overflow-y: auto;
+		width: 100%;
+		min-height: 200px;
+
+	}
 }
 
 @include media-breakpoint-only(sm) {
